feat(keyboard): improve layout handling and logging\n\n- Add keyboard layout to startup configuration summary.\n- Implement `azerty` alias for French keyboard layout.\n- Refine warning logic for unknown keyboard layouts to prevent false positives with aliases.\n- Refactor default keyboard layout initialization to use `get_layout` method.\n- Update `us.yaml` with a more comprehensive definition.

--- a/site/index.html
+++ b/site/index.html
@@ -356,6 +356,10 @@
           </p>
         </div>
         <div class="feature">
+          <h3>Keyboard Layouts</h3>
+          <p>Supports multiple keyboard layouts (e.g., US, FR, DE) for accurate input across different regions.</p>
+        </div>
+        <div class="feature">
           <h3>Virtual Media</h3>
           <p>
             Expose disk images to the server as if they were plugged in via USB
